[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.94"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geo = "0.29.3"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
log = "0.4.22"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.133"
wasm-bindgen = "0.2.97"
web-sys = { version = "0.3.74", features = ["console"] }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
